Refactor Chip8: Modernize application entry and resource management